5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1831_1643.log
== SUBMITION (2019-06-13 16:51:21) 
-- CODE:
from numpy import * 
n = array(eval(input("notas:")))
b = zeros(5,dtype=int)
a=0
for i in range(size(n)):
	if(n[i]>=5):
		a=a+1
b=0
for j in range(size(n)):
	if(n[j]>=5):
		vet[b]==i
		b=b+1
print(a)
print(b)


-- EXECUTION TIME:
1.06283
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1831/1643/main.py", line 11, in <module>
    vet[b]==i
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:54:15) 
-- CODE:
from numpy import * 
n = array(eval(input("notas:")))
a=0
for i in range(size(n)):
	if(n[i]>=5):
		a=a+1
b = zeros(a,dtype=int)
for j in range(size(n)):
	if(n[j]>=5):
		vet[b]==i
		c=c+1
print(a)
print(b)


-- EXECUTION TIME:
0.767697
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1831/1643/main.py", line 10, in <module>
    vet[b]==i
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:54:20) 
-- CODE:
from numpy import * 
n = array(eval(input("notas:")))
a=0
for i in range(size(n)):
	if(n[i]>=5):
		a=a+1
b = zeros(a,dtype=int)
for j in range(size(n)):
	if(n[j]>=5):
		vet[b]==i
		c=c+1
print(a)
print(b)


-- EXECUTION TIME:
0.928768
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1831/1643/main.py", line 10, in <module>
    vet[b]==i
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:54:26) 
-- CODE:
from numpy import * 
n = array(eval(input("notas:")))
a=0
for i in range(size(n)):
	if(n[i]>=5):
		a=a+1
b = zeros(a,dtype=int)
for j in range(size(n)):
	if(n[j]>=5):
		vet[b]==i
		c=c+1
print(a)
print(b)


-- EXECUTION TIME:
2.07747
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1831/1643/main.py", line 10, in <module>
    vet[b]==i
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:54:27) 
-- CODE:
from numpy import * 
n = array(eval(input("notas:")))
a=0
for i in range(size(n)):
	if(n[i]>=5):
		a=a+1
b = zeros(a,dtype=int)
for j in range(size(n)):
	if(n[j]>=5):
		vet[b]==i
		c=c+1
print(a)
print(b)


-- EXECUTION TIME:
2.12776
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1831/1643/main.py", line 10, in <module>
    vet[b]==i
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:54:27) 
-- CODE:
from numpy import * 
n = array(eval(input("notas:")))
a=0
for i in range(size(n)):
	if(n[i]>=5):
		a=a+1
b = zeros(a,dtype=int)
for j in range(size(n)):
	if(n[j]>=5):
		vet[b]==i
		c=c+1
print(a)
print(b)


-- EXECUTION TIME:
1.94563
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1831/1643/main.py", line 10, in <module>
    vet[b]==i
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:54:36) 
-- CODE:
from numpy import * 
n = array(eval(input("notas:")))
a=0
for i in range(size(n)):
	if(n[i]>=5):
		a=a+1
b = zeros(a,dtype=int)
for j in range(size(n)):
	if(n[j]>=5):
		n[b]==i
		c=c+1
print(a)
print(b)


-- EXECUTION TIME:
0.918481
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1831/1643/main.py", line 11, in <module>
    c=c+1
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:54:50) 
-- CODE:
from numpy import * 
n = array(eval(input("notas:")))
a=0
for i in range(size(n)):
	if(n[i]>=5):
		a=a+1
b = zeros(a,dtype=int)
c=0
for j in range(size(n)):
	if(n[j]>=5):
		n[b]==i
		c=c+1
print(a)
print(b)


-- EXECUTION TIME:
0.830484
-- TEST CASE 1:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99]
---- correct output:
6
[0 3 4 5 6 7]
---- user output:
6
[0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,5,2.3,6]
---- correct output:
8
[ 0  3  4  5  6  7  8 10]
---- user output:
8
[0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99,6.1,3.6,2.9,10,8]
---- correct output:
9
[ 0  3  4  5  6  7 11 14 15]
---- user output:
9
[0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:54:53) 
-- CODE:
from numpy import * 
n = array(eval(input("notas:")))
a=0
for i in range(size(n)):
	if(n[i]>=5):
		a=a+1
b = zeros(a,dtype=int)
c=0
for j in range(size(n)):
	if(n[j]>=5):
		n[b]==i
		c=c+1
print(a)
print(b)


-- EXECUTION TIME:
0.843104
-- TEST CASE 1:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99]
---- correct output:
6
[0 3 4 5 6 7]
---- user output:
6
[0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,5,2.3,6]
---- correct output:
8
[ 0  3  4  5  6  7  8 10]
---- user output:
8
[0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99,6.1,3.6,2.9,10,8]
---- correct output:
9
[ 0  3  4  5  6  7 11 14 15]
---- user output:
9
[0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
